--- a/ITS_demo/templates/algebra_add.html
+++ b/ITS_demo/templates/algebra_add.html
@@ -3,6 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Q1</title>
+    <style>
+      .quo {
+        display: inline;
+        width: 6%;
+        height: calc(1.5em + .75rem + -6px);
+      }
+
+      #error {
+            border:2pt solid red;
+        }
+
+      #right {
+        border:2pt solid green
+      }
+      
+}
+    </style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
@@ -20,9 +37,276 @@ ajax/libs/jquery/1.5/jquery.min.js"></script>
   crossorigin="anonymous"></script>
 <script src="semantic/dist/semantic.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script type="text/javascript">
+  var x = document.getElementsByClassName("correct");
+var y = document.getElementsByClassName("wrong");
+var feedcount = 0;
 
+function check0()
+{
+if(document.getElementsByTagName("input")[0].value == {{ answer.coeff[0] }} ) 
+{
+   $(x[0]).show();
+     $(y[0]).hide();
+     document.getElementsByClassName("quo")[0].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[0]).hide();
+      $(y[0]).show();
+      document.getElementsByClassName("quo")[0].id = 'error';
+    // document.getElementsByTagName("input")[0].value = "";
+    
+ }
+}
  
+function check1()
+{
+if(document.getElementsByTagName("input")[1].value == {{ answer.coeff[1] }} ) 
+{
+   $(x[0]).show();
+    $(y[0]).hide();
+    document.getElementsByClassName("quo")[1].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[0]).hide();
+      $(y[0]).show();
+    document.getElementsByClassName("quo")[1].id = 'error';
+    // document.getElementsByTagName("input")[1].value = "";
+    
+ }
+}
 
+function check2()
+{
+  if(document.getElementsByTagName("input")[2].value == {{ answer.coeff[2] }} ) 
+  {
+    $(x[0]).show();
+    $(y[0]).hide();
+    document.getElementsByClassName("quo")[2].id = 'right';
+    }
+  else
+  {
+  feedcount++;
+        $(x[0]).hide();
+        $(y[0]).show();
+        document.getElementsByClassName("quo")[2].id = 'error';
+      // document.getElementsByTagName("input")[2].value = "";
+
+  }
+}
+
+function check3()
+{
+if(document.getElementsByTagName("input")[3].value == {{ answer.coeff[3] }} ) 
+{
+    $(x[0]).show();
+    $(y[0]).hide();
+    document.getElementsByClassName("quo")[3].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[0]).hide();
+      $(y[0]).show();
+      document.getElementsByClassName("quo")[3].id = 'error';
+    // document.getElementsByTagName("input")[3].value = "";
+    
+ }
+}
+
+function check4()
+{
+if(document.getElementsByTagName("input")[4].value == {{ answer.coeff[4] }} ) 
+{
+   $(x[0]).show();
+   $(y[0]).hide();
+   document.getElementsByClassName("quo")[4].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[0]).hide();
+      $(y[0]).show();
+      document.getElementsByClassName("quo")[4].id = 'error';
+    // document.getElementsByTagName("input")[4].value = "";
+    
+ }
+}
+
+function check5()
+{
+if(document.getElementsByTagName("input")[5].value == {{ answer.coeff[5] }} ) 
+{
+      $(x[0]).show();
+      $(y[0]).hide();
+      document.getElementsByClassName("quo")[5].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[0]).hide();
+      $(y[0]).show();
+      document.getElementsByClassName("quo")[5].id = 'error';
+    // document.getElementsByTagName("input")[5].value = "";
+    
+ }
+}
+
+function check6()
+{
+if(document.getElementsByTagName("input")[6].value == {{ answer.coeff[0] }} ) 
+{
+   $(x[1]).show();
+     $(y[1]).hide();
+     document.getElementsByClassName("quo")[6].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[1]).hide();
+      $(y[1]).show();
+      document.getElementsByClassName("quo")[6].id = 'error';
+    // document.getElementsByTagName("input")[6].value = "";
+    
+ }
+}
+
+function check7()
+{
+if(document.getElementsByTagName("input")[7].value == {{ answer.coeff[2] }} ) 
+{
+   $(x[1]).show();
+     $(y[1]).hide();
+     document.getElementsByClassName("quo")[7].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[1]).hide();
+      $(y[1]).show();
+      document.getElementsByClassName("quo")[7].id = 'error';
+    // document.getElementsByTagName("input")[7].value = "";
+    
+ }
+}
+
+function check8()
+{
+if(document.getElementsByTagName("input")[8].value == {{ answer.coeff[4] }} ) 
+{
+   $(x[1]).show();
+     $(y[1]).hide();
+     document.getElementsByClassName("quo")[8].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[1]).hide();
+      $(y[1]).show();
+      document.getElementsByClassName("quo")[8].id = 'error';
+    // document.getElementsByTagName("input")[8].value = "";
+    
+ }
+}
+
+function check9()
+{
+if(document.getElementsByTagName("input")[9].value == {{ answer.coeff[1] }} ) 
+{
+   $(x[1]).show();
+     $(y[1]).hide();
+     document.getElementsByClassName("quo")[9].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[1]).hide();
+      $(y[1]).show();
+      document.getElementsByClassName("quo")[9].id = 'error';
+    // document.getElementsByTagName("input")[9].value = "";
+    
+ }
+}
+
+function check10()
+{
+if(document.getElementsByTagName("input")[10].value == {{ answer.coeff[3] }} ) 
+{
+   $(x[1]).show();
+     $(y[1]).hide();
+     document.getElementsByClassName("quo")[10].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[1]).hide();
+      $(y[1]).show();
+      document.getElementsByClassName("quo")[10].id = 'error'; 
+    // document.getElementsByTagName("input")[10].value = "";
+    
+ }
+}
+
+function check11()
+{
+if(document.getElementsByTagName("input")[11].value == {{ answer.coeff[5] }} ) 
+{
+   $(x[1]).show();
+     $(y[1]).hide();
+     document.getElementsByClassName("quo")[11].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[1]).hide();
+      $(y[1]).show();
+      document.getElementsByClassName("quo")[11].id = 'error';
+    // document.getElementsByTagName("input")[11].value = "";
+    
+ }
+}
+
+function check12()
+{
+if(document.getElementsByTagName("input")[12].value == {{ answer.x_sum }} ) 
+{
+   $(x[2]).show();
+     $(y[2]).hide();
+     document.getElementsByClassName("quo")[12].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[2]).hide();
+      $(y[2]).show();
+      document.getElementsByClassName("quo")[12].id = 'error';
+    // document.getElementsByTagName("input")[12].value = "";
+    
+ }
+}
+
+function check13()
+{
+if(document.getElementsByTagName("input")[13].value == {{ answer.y_sum }} ) 
+{
+   $(x[2]).show();
+     $(y[2]).hide();
+     document.getElementsByClassName("quo")[13].id = 'right';
+  }
+else
+{
+ feedcount++;
+      $(x[2]).hide();
+      $(y[2]).show();
+       document.getElementsByClassName("quo")[13].id = 'error';
+    
+ }
+}
+</script>
 <body>
     <nav class="n1">
       <div id="content">
@@ -67,27 +351,28 @@ ajax/libs/jquery/1.5/jquery.min.js"></script>
 <form method="post" action= "" class="myform" id="f1">
     {{ answer.que }}
     <br><br>
-
-    (<input type="text" id="quo" name="quo" maxlength="2" size="2"  required>{{ answer.varx }}+
-    <input type="text" id="quo" name="quo" maxlength="2" size="2"  required>{{ answer.vary }})+
-    (<input type="text" id="quo" name="quo" maxlength="2" size="2"  required>{{ answer.varx }}+
-    <input type="text" id="quo" name="quo" maxlength="2" size="2"  required>{{ answer.vary }})+
-    (<input type="text" id="quo" name="quo" maxlength="2" size="2"  required>{{ answer.varx }}+
-    <input type="text" id="quo" name="quo" maxlength="2" size="2"  required>{{ answer.vary }})
+    (<input type="text" class="quo" name="quo" maxlength="3" size="3"  onkeyup="check0();"required>{{ answer.varx }}+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3"  onkeyup="check1();" required>{{ answer.vary }})+
+    (<input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check2();" required>{{ answer.varx }}+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check3();" required>{{ answer.vary }})+
+    (<input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check4();" required>{{ answer.varx }}+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check5();" required>{{ answer.vary }})
     <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
     <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
     <br><br>
-    (<input type="text" id="quo" name="quo" maxlength="2" size="2"  required>+
-    <input type="text" id="quo" name="quo" maxlength="2" size="2"  required>+
-    <input type="text" id="quo" name="quo" maxlength="2" size="2"  required>){{ answer.varx }}+
-    (<input type="text" id="quo" name="quo" maxlength="2" size="2"  required>+
-    <input type="text" id="quo" name="quo" maxlength="2" size="2"  required>+
-    <input type="text" id="quo" name="quo" maxlength="2" size="2"  required>){{ answer.vary }}
+    (<input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check6();" required>+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check7();" required>+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check8();" required>){{ answer.varx }}+
+    (<input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check9();" required>+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check10();" required>+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check11();" required>){{ answer.vary }}
     <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
     <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
     <br><br>
-    <input type="text" id="quo" name="quo" maxlength="2" size="2"  required>{{ answer.varx }}+
-    <input type="text" id="quo" name="quo" maxlength="2" size="2"  required>{{ answer.vary }}
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check12();" required>{{ answer.varx }}+
+    <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check13();" required>{{ answer.vary }}
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
     <br><br>
     <input id="b1" type="submit" value="Submit">
     <input type="button" class="hint-btn" id="hint-btn" value="Hint" target = "_self">
