template inheritance in algebra

--- a/ITS_demo/templates/display copy.html
+++ b/ITS_demo/templates/display copy.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}Q1{% endblock %}
-{% block head %}
+<!-- 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
@@ -17,8 +17,7 @@ ajax/libs/jquery/1.5/jquery.min.js"></script>
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
 <script src="semantic/dist/semantic.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-{% endblock %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
 {% block script %}
 
