--- a/ITS_demo/templates/algebra_add.html
+++ b/ITS_demo/templates/algebra_add.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Q1</title>
-    <style>
+{% extends "layout.html" %}
+    {% block title %}Q1{% endblock %}
+    {% block style %}
+    
       .quo {
         display: inline;
         width: 6%;
@@ -19,14 +17,14 @@
       }
       
 }
-    </style>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+{% endblock %}
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static' , filename='css/q1style.css') }}">
-    <script type="text/javascript" src="{{ url_for('static' , filename='js/q1script.js') }}"></script>
-</head>
-<script type="text/javascript" src="http://ajax.googleapis.com/
+    <script type="text/javascript" src="{{ url_for('static' , filename='js/q1script.js') }}"></script> -->
+
+<!-- <script type="text/javascript" src="http://ajax.googleapis.com/
 ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script type="text/javascript" src="jquery.form.js"></script>
 <script src="https://use.fontawesome.com/84eb6ff010.js"></script>
@@ -37,7 +35,9 @@ ajax/libs/jquery/1.5/jquery.min.js"></script>
   crossorigin="anonymous"></script>
 <script src="semantic/dist/semantic.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script type="text/javascript">
+<script type="text/javascript"> -->
+
+{% block script %}
   var x = document.getElementsByClassName("correct");
 var y = document.getElementsByClassName("wrong");
 var feedcount = 0;
@@ -306,8 +306,39 @@ else
     
  }
 }
-</script>
-<body>
+
+window.onload = function() {
+  var count = 0;
+  
+  var countButton = document.getElementById("hint-btn");
+  var displayCount = document.getElementsByClassName("showhints");
+  countButton.onclick = function(){
+    count++;
+    if(count == 1)
+    {
+    displayCount[0].innerHTML = "Hint 1 :{{ hints.h1 }}\n" ;
+    }
+    else
+    {
+      if(count == 2) {displayCount[1].innerHTML = "Hint 2 :{{ hints.h2 }}\n" ;}
+      else {displayCount[2].innerHTML = "Hint 3 :{{ hints.h3 }}\n" ;}
+    }
+    }
+  
+    var subbutton = document.getElementById("b1");
+    subbutton.onclick = function(){
+       document.querySelector(".myform").setAttribute("action","score/"+count+"/"+feedcount);
+       function time(){
+       var s=document.getElementById("scre");
+       s.style.display="none";
+       }
+       var d=setTimeout(time,500);
+       clearInterval(d);
+
+    }
+  }
+{% endblock %}
+<!-- <body>
     <nav class="n1">
       <div id="content">
     <span class="slide">
@@ -328,8 +359,8 @@ else
         <h1>ITS-Maths</h1>
     </div>
 
-        </nav>
-
+        </nav> -->
+        {% block message %}
 <div>
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
@@ -342,13 +373,17 @@ else
   {% endif %}
 {% endwith %}
 </div>
+{% endblock %}
+{% block progress %}{{scoredict.tcp}}%{% endblock %}
+{% block pvalue %}{{ scoredict.tcp }}{% endblock %}
+<!-- 
 <div style="position:relative;">
 <div class = "showhints" id="showhint1" style="position:absolute;top:20%;left:35%; height:200px; width:200px;">{{ hints.h1 }}</div>
 <div class = "showhints" id="showhint2" style="position:absolute;top:50; left:35%; top:50px; height:200px; width:200px;">{{ hints.h2 }}</div>
 <div class = "showhints" id="showhint3" style="position:absolute;top:80%; left:35%; top:100px; height:200px; width:200px;">{{ hints.h3 }}</div>
-</div>
-
-<form method="post" action= "" class="myform" id="f1">
+</div> -->
+{% block content %}
+<!-- <form method="post" action= "" class="myform" id="f1"> -->
     {{ answer.que }}
     <br><br>
     (<input type="text" class="quo" name="quo" maxlength="3" size="3"  onkeyup="check0();"required>{{ answer.varx }}+
@@ -357,8 +392,8 @@ else
     <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check3();" required>{{ answer.vary }})+
     (<input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check4();" required>{{ answer.varx }}+
     <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check5();" required>{{ answer.vary }})
-    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
-    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct">
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong">
     <br><br>
     (<input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check6();" required>+
     <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check7();" required>+
@@ -366,19 +401,16 @@ else
     (<input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check9();" required>+
     <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check10();" required>+
     <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check11();" required>){{ answer.vary }}
-    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
-    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct">
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong">
     <br><br>
     <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check12();" required>{{ answer.varx }}+
     <input type="text" class="quo" name="quo" maxlength="3" size="3" onkeyup="check13();" required>{{ answer.vary }}
-    <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
-    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
+    <img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct">
+    <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong">
     <br><br>
-    <input id="b1" type="submit" value="Submit">
+    <!-- <input id="b1" type="submit" value="Submit">
     <input type="button" class="hint-btn" id="hint-btn" value="Hint" target = "_self">
-</form>
+</form> -->
 
-
-
-</body>
-</html>
+{% endblock %}
