--- a/ITS_demo/templates/algebra_add.html
+++ b/ITS_demo/templates/algebra_add.html
@@ -375,6 +375,7 @@ window.onload = function() {
 </div>
 {% endblock %}
 {% block progress %}{{scoredict.tcp}}%{% endblock %}
+{% block question %}{{scoredict.totalqts }}{% endblock %}
 {% block pvalue %}{{ scoredict.tcp }}{% endblock %}
 <!-- 
 <div style="position:relative;">
