--- a/ITS_demo/templates/index.html
+++ b/ITS_demo/templates/index.html
@@ -138,12 +138,17 @@
   margin: 4px 2px;
   cursor: pointer;
 }
-.button5 {background-color: #555555;}
+.button5 {background-color: white;}
 		#n3 #d6 p{
 			text-align: justify;
 			font-size: 150%;
 			color: black;
 		}
+
+#n2 #d4 {
+	color:white;
+}
+
 
 	</style>
 </head>
