--- a/ITS_demo/templates/layout.html
+++ b/ITS_demo/templates/layout.html
@@ -194,6 +194,24 @@ progress::-webkit-progress-bar {
   background: grey;
 }
 
+#s3{
+	font-size: 2.5rem;
+			font-style: italic;
+			text-shadow: 2px 2px 3px aliceblue;
+			color: blueviolet;
+			text-decoration: underline;
+			padding-left: 4.7%; 
+			transition: all 1s;
+}
+
+#s4{
+		font-size: 2.5rem;
+			font-style: italic;
+			color: seagreen;
+			padding-left: 0%;
+			transition: all 1s;
+}
+
 {% block style %}{% endblock %}
 	</style>
 </head>
@@ -224,6 +242,8 @@ progress::-webkit-progress-bar {
 		<span id="s1">Your Progress:</span>
 		<span id="s2">{% block progress %}{% endblock %}</span>
 		<progress value="{% block pvalue %}{% endblock %}" max="100"></progress>
+		<span id="s3">Questions Attempted:{% block question %}{% endblock %}</span>
+		
     	</div>
 	</div> 
 	<br>
@@ -246,11 +266,17 @@ progress::-webkit-progress-bar {
 		const opennav=()=>{
 			document.getElementById("d3").style.width="300px";
 			document.getElementById("p1").style.paddingLeft="30%";
+			document.getElementById("s3").style.display="block";
+			document.getElementById("s4").style.display="inline";
 		}
 		const closenav=()=>{
 			document.getElementById("d3").style.width="0px";
 			document.getElementById("p1").style.paddingLeft="0%";
+			document.getElementById("s3").style.display="inline-block";
+			
 		}
+
+
 	</script>
 </body>
 </html>
