--- a/ITS_demo/templates/display copy.html
+++ b/ITS_demo/templates/display copy.html
@@ -1,23 +1,5 @@
 {% extends "layout.html" %}
 {% block title %}Q1{% endblock %}
-<!-- 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static' , filename='css/q1style.css') }}">
-    <script type="text/javascript" src="{{ url_for('static' , filename='js/q1script.js') }}"></script>
-</head>
-<script type="text/javascript" src="http://ajax.googleapis.com/
-ajax/libs/jquery/1.5/jquery.min.js"></script>
-<script type="text/javascript" src="jquery.form.js"></script>
-<script src="https://use.fontawesome.com/84eb6ff010.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-<script src="semantic/dist/semantic.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
 {% block script %}
 
@@ -198,7 +180,7 @@ countButton.onclick = function(){
 
   var subbutton = document.getElementById("b1");
   subbutton.onclick = function(){
-     document.querySelector(".myform").setAttribute("action","score/"+count+"/"+feedcount);
+     document.querySelector(".myform").setAttribute("action","score/"+1+"/"+count+"/"+feedcount);
      function time(){
      var s=document.getElementById("scre");
      s.style.display="none";
