Vertical subtraction question added

--- a/ITS_demo/templates/index.html
+++ b/ITS_demo/templates/index.html
@@ -182,7 +182,7 @@
 			<h1 id="topic">TOPICS:</h1>
 			<h3 id="topic">Add Horizontally</h3>
 			<button class="button button5">
-				<a href="{{url_for('horizontal_add')}}">Practice</a>
+				<a href="{{url_for('vertical_sub')}}">Practice</a>
 			</button>
 		</div>
 	</nav>
